Update experiment.ipynb with new imports and mock functions

--- a/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
+++ b/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import json\n",
     "from datetime import datetime, timedelta\n",
     "import os\n",
-    "from unittest.mock import patch"
+    "from unittest.mock import patch\n",
+    "import boto3"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
     "\n",
     "        # Calculate the distances between the regions\n",
     "        transmission_distances = {\n",
-    "            region_key: calculate_distance(regions_info[current_region][0], regions_info[current_region][1], regions_info[region_key][0], regions_info[region_key][1]) for region_key in regions_info\n",
+    "            f\"aws:{region_key}\": calculate_distance(regions_info[current_region][0], regions_info[current_region][1], regions_info[region_key][0], regions_info[region_key][1]) for region_key in regions_info\n",
     "        }\n",
     "    \n",
     "        # Assemble the result dictionary\n",
@@ -195,10 +196,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from multi_x_serverless.common.constants import GLOBAL_SYSTEM_REGION, DEPLOYMENT_OPTIMIZATION_MONITOR_RESOURCE_TABLE\n",
+    "from multi_x_serverless.routing.workflow_config import WorkflowConfig\n",
+    "from multi_x_serverless.routing.deployment_algorithms.stochastic_heuristic_deployment_algorithm import StochasticHeuristicDeploymentAlgorithm\n",
+    "from multi_x_serverless.routing.deployment_input.components.loaders.carbon_loader import CarbonLoader\n",
+    "from multi_x_serverless.routing.deployment_input.components.loaders.region_viability_loader import RegionViabilityLoader\n",
+    "from multi_x_serverless.routing.deployment_algorithms.deployment_algorithm import DeploymentAlgorithm\n",
+    "\n",
+    "# First define the involved benchmarks, these should already be deployed and have workflow data\n",
+    "benchmarks = [\"dna_visualization-0.0.1\"]\n",
+    "\n",
+    "constraint_configurations = {\n",
+    "    \"no_constraints\": {\n",
+    "        \"constraints\": {\n",
+    "            \"hard_resource_constraints\": {\"cost\": None, \"runtime\": None, \"carbon\": None},\n",
+    "            \"soft_resource_constraints\": {\"cost\": None, \"runtime\": None, \"carbon\": None},\n",
+    "            \"priority_order\": [\"carbon\", \"cost\", \"runtime\"],\n",
+    "        }\n",
+    "    },\n",
+    "    \"five_percent_runtime_constraint\": {\n",
+    "        \"constraints\": {\n",
+    "            \"hard_resource_constraints\": {\"cost\": None, \"runtime\": {\"type\": \"relative\", \"value\": 105}, \"carbon\": None},\n",
+    "            \"soft_resource_constraints\": {\"cost\": None, \"runtime\": None, \"carbon\": None},\n",
+    "            \"priority_order\": [\"carbon\", \"cost\", \"runtime\"],\n",
+    "        }\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "dynamodb_client = boto3.client('dynamodb', region_name=GLOBAL_SYSTEM_REGION)\n",
+    "for benchmark in benchmarks:\n",
+    "    response = dynamodb_client.get_item(TableName=DEPLOYMENT_OPTIMIZATION_MONITOR_RESOURCE_TABLE, Key={\"key\": {\"S\": benchmark}})\n",
+    "    item = response.get(\"Item\")\n",
+    "    workflow_config_from_table = item[\"value\"][\"S\"]\n",
+    "\n",
+    "    workflow_config_dict = json.loads(json.loads(workflow_config_from_table).get(\"workflow_config\"))\n",
+    "    for configuration_name, configuration in constraint_configurations.items():\n",
+    "        workflow_config_dict[\"constraints\"] = configuration[\"constraints\"]\n",
+    "        workflow_config = WorkflowConfig(workflow_config_dict)\n",
+    "\n",
+    "        for day in range((end_date - start_date).days + 1):\n",
+    "            current_date = start_date + timedelta(days=day)\n",
+    "\n",
+    "            def mock_carbon_loader_setup(self, available_regions: set[str]):\n",
+    "                real_available_regions = list(locations.keys())\n",
+    "                loaded_carbon_data = {}\n",
+    "                for region in real_available_regions:\n",
+    "                    carbon_data_path = f'./data/collected_carbon/{region}/{current_date.strftime(\"%Y-%m-%d\")}/data.json'\n",
+    "                    with open(carbon_data_path, 'r') as file:\n",
+    "                        loaded_carbon_data[f'aws:{region}'] = json.load(file)\n",
+    "                self._carbon_data = loaded_carbon_data\n",
+    "\n",
+    "            def mock_region_viability_setup(self):\n",
+    "                self._available_regions = [f'aws:{region}' for region in locations.keys()]\n",
+    "\n",
+    "            def mock_upload_result(self, result: dict):\n",
+    "                result_path = f'./data/deployment_results/{benchmark}/{configuration_name}/'\n",
+    "                os.makedirs(result_path, exist_ok=True)\n",
+    "                with open(os.path.join(result_path, f'{current_date.strftime(\"%Y-%m-%d\")}.json'), 'w') as file:\n",
+    "                    json.dump(result, file, indent=4)\n",
+    "\n",
+    "            with patch.object(CarbonLoader, 'setup', new=mock_carbon_loader_setup), patch.object(RegionViabilityLoader, 'setup', new=mock_region_viability_setup), patch.object(DeploymentAlgorithm, '_upload_result', new=mock_upload_result):\n",
+    "                algorithm = StochasticHeuristicDeploymentAlgorithm(workflow_config)\n",
+    "                algorithm.run([f\"{i}\" for i in range(24)])"
+   ]
   },
   {
    "cell_type": "code",
