Continue benchmark script

--- a/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
+++ b/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,15 +188,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run the Deployment Algorithm\n",
+    "### Get Data from the Home Region\n",
     "\n",
-    "We need to run the deployment algorithm for the days between the start and end date. We will run it every day and store the results locally in files.\n",
-    "Additionally, we need to provide the data collected by a specific workflow as the input to the workflow loader."
+    "For each benchmark:\n",
+    "1. Deploy the benchmark (optimally without any constraints) to the home region (which should be one of the regions we eventually also want to take into consideration).\n",
+    "2. Run the benchmark for a time (use the `invoke_serverless_function_uniform.sh` script to do so). I used it for example like this:\n",
+    "```bash\n",
+    "poetry run ./invoke_serverless_function_uniform.sh dna_visualization 0.0.1 200 3600\n",
+    "```\n",
+    "3. Use the following small script to log sync the data and store it locally."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the benchmarks:\n",
+    "benchmarks = [\"dna_visualization-0.0.1\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Log Sync"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multi_x_serverless.syncers.log_syncer import LogSyncWorkflow\n",
+    "from multi_x_serverless.common.models.endpoints import Endpoints\n",
+    "from multi_x_serverless.common.constants import DEPLOYMENT_MANAGER_RESOURCE_TABLE, GLOBAL_TIME_ZONE\n",
+    "\n",
+    "# This assumes that the run happened in the last 24 hours\n",
+    "time_intervals = [(datetime.now(GLOBAL_TIME_ZONE) - timedelta(days=1), datetime.now(GLOBAL_TIME_ZONE))]\n",
+    "\n",
+    "region_clients = {}\n",
+    "endpoints = Endpoints()\n",
+    "\n",
+    "for workflow_id in benchmarks:\n",
+    "    deployment_manager_config_str = endpoints.get_deployment_manager_client().get_value_from_table(\n",
+    "        DEPLOYMENT_MANAGER_RESOURCE_TABLE, workflow_id\n",
+    "    )\n",
+    "\n",
+    "    raw_data_dir = f\"./data/home_region_run_data/{workflow_id}\"\n",
+    "    os.makedirs(raw_data_dir, exist_ok=True)\n",
+    "\n",
+    "    def mock_upload_data(self, data_for_upload: str):\n",
+    "        with open(f\"{raw_data_dir}/data.json\", \"w\") as f:\n",
+    "            f.write(data_for_upload)\n",
+    "\n",
+    "    with patch.object(LogSyncWorkflow, \"_upload_data\", mock_upload_data):\n",
+    "        log_sync_workflow = LogSyncWorkflow(\n",
+    "            workflow_id,\n",
+    "            region_clients,\n",
+    "            deployment_manager_config_str,\n",
+    "            time_intervals,\n",
+    "            endpoints.get_datastore_client(),\n",
+    "            {}\n",
+    "        )\n",
+    "        log_sync_workflow.sync_workflow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Workflow Collect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multi_x_serverless.data_collector.components.workflow.workflow_retriever import WorkflowRetriever\n",
+    "from multi_x_serverless.data_collector.components.data_collector import DataCollector\n",
+    "\n",
+    "workflow_retriever = WorkflowRetriever(None)\n",
+    "\n",
+    "for workflow_id in benchmarks:\n",
+    "\n",
+    "    raw_data_dir = f\"./data/home_region_run_data/{workflow_id}/data.json\"\n",
+    "\n",
+    "    with open(raw_data_dir, \"r\") as f:\n",
+    "        data = f.read()\n",
+    "\n",
+    "    workflow_summary = workflow_retriever._transform_workflow_summary(\n",
+    "        data,\n",
+    "    )\n",
+    "\n",
+    "    collected_data_dir = f\"./data/collected_workflow/{workflow_id}/home_region\"\n",
+    "    os.makedirs(collected_data_dir, exist_ok=True)\n",
+    "\n",
+    "    with open(f\"{collected_data_dir}/data.json\", \"w\") as f:\n",
+    "        json.dump(workflow_summary, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the Deployment Algorithm\n",
+    "\n",
+    "We need to run the deployment algorithm for the days between the start and end date. We will run it every day and store the results locally in files.\n",
+    "Additionally, we need to provide the data collected by a specific workflow as the input to the workflow loader.\n",
+    "\n",
+    "**TODO BEFORE the following is executed:** For each of the involved benchmarks we need to actually have some data from the home region. So please do **Get Data from the Home Region** first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,10 +316,9 @@
     "from multi_x_serverless.routing.deployment_input.components.loaders.carbon_loader import CarbonLoader\n",
     "from multi_x_serverless.routing.deployment_input.components.loaders.region_viability_loader import RegionViabilityLoader\n",
     "from multi_x_serverless.routing.deployment_algorithms.deployment_algorithm import DeploymentAlgorithm\n",
+    "from multi_x_serverless.routing.deployment_input.components.loaders.workflow_loader import WorkflowLoader\n",
     "\n",
-    "# First define the involved benchmarks, these should already be deployed and have workflow data\n",
-    "benchmarks = [\"dna_visualization-0.0.1\"]\n",
-    "\n",
+    "# Define the constraint configurations\n",
     "constraint_configurations = {\n",
     "    \"no_constraints\": {\n",
     "        \"constraints\": {\n",
@@ -250,6 +359,12 @@
     "                        loaded_carbon_data[f'aws:{region}'] = json.load(file)\n",
     "                self._carbon_data = loaded_carbon_data\n",
     "\n",
+    "            def mock_workflow_loader_setup(self, workflow_id: str):\n",
+    "                collected_data_dir = f\"./data/collected_workflow/{workflow_id}/home_region/data.json\"\n",
+    "\n",
+    "                with open(collected_data_dir, \"r\") as f:\n",
+    "                    self._workflow_data = json.load(f)\n",
+    "\n",
     "            def mock_region_viability_setup(self):\n",
     "                self._available_regions = [f'aws:{region}' for region in locations.keys()]\n",
     "\n",
@@ -259,9 +374,119 @@
     "                with open(os.path.join(result_path, f'{current_date.strftime(\"%Y-%m-%d\")}.json'), 'w') as file:\n",
     "                    json.dump(result, file, indent=4)\n",
     "\n",
-    "            with patch.object(CarbonLoader, 'setup', new=mock_carbon_loader_setup), patch.object(RegionViabilityLoader, 'setup', new=mock_region_viability_setup), patch.object(DeploymentAlgorithm, '_upload_result', new=mock_upload_result):\n",
+    "            with patch.object(CarbonLoader, 'setup', new=mock_carbon_loader_setup), patch.object(RegionViabilityLoader, 'setup', new=mock_region_viability_setup), patch.object(DeploymentAlgorithm, '_upload_result', new=mock_upload_result), patch.object(WorkflowLoader, 'setup', new=mock_workflow_loader_setup):\n",
     "                algorithm = StochasticHeuristicDeploymentAlgorithm(workflow_config)\n",
     "                algorithm.run([f\"{i}\" for i in range(24)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run new experiments for the new deployments\n",
+    "\n",
+    "Now since we have the new deployments, we can run the experiments for them. We don't need to run all experiments, basically we need to run all the combinations of the regions involved. For this we need to iterate over the potential deployments, find combinations of regions that are not yet collected and run the experiments for them. The following script will do this on a per benchmark basis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Please select the benchmark you want to run the experiment for\n",
+    "benchmark = benchmarks[0]\n",
+    "\n",
+    "deployment_result_path = f'./data/deployment_results/{benchmark}'\n",
+    "\n",
+    "unique_instance_region_combinations = set()\n",
+    "\n",
+    "# Iterate over all results, retrieving the combinations of instances and regions\n",
+    "for directory in os.listdir(deployment_result_path):\n",
+    "    if not os.path.isdir(os.path.join(deployment_result_path, directory)):\n",
+    "        continue\n",
+    "    for file in os.listdir(os.path.join(deployment_result_path, directory)):\n",
+    "        with open(os.path.join(deployment_result_path, directory, file), 'r') as f:\n",
+    "            data = json.load(f)\n",
+    "        for time_key, deployment in data[\"time_keys_to_staging_area_data\"].items():\n",
+    "            deployment_str = json.dumps(deployment)\n",
+    "            unique_instance_region_combinations.add(deployment_str)\n",
+    "\n",
+    "# Store the unique combinations\n",
+    "with open(f'./data/deployment_results/{benchmark}/unique_instance_region_combinations.json', 'w') as f:\n",
+    "    json.dump(list(unique_instance_region_combinations), f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Re-deploy all deployments\n",
+    "\n",
+    "Before we can run the experiments we need the code to be in the right regions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found credentials in shared credentials file: ~/.aws/credentials\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found credentials in shared credentials file: ~/.aws/credentials\n",
+      "Found credentials in shared credentials file: ~/.aws/credentials\n",
+      "Found credentials in shared credentials file: ~/.aws/credentials\n"
+     ]
+    }
+   ],
+   "source": [
+    "from multi_x_serverless.deployment.common.deploy.deployer import Deployer, create_default_deployer\n",
+    "from multi_x_serverless.common.constants import (\n",
+    "    DEPLOYMENT_MANAGER_RESOURCE_TABLE\n",
+    ")\n",
+    "from multi_x_serverless.deployment.common.factories.deployer_factory import DeployerFactory\n",
+    "\n",
+    "endpoints = Endpoints()\n",
+    "\n",
+    "workflow_id = benchmarks[0]\n",
+    "\n",
+    "deployment_result_path = f'./data/deployment_results/{workflow_id}/unique_instance_region_combinations.json'\n",
+    "\n",
+    "workflow_data_raw = endpoints.get_deployment_manager_client().get_value_from_table(\n",
+    "    DEPLOYMENT_MANAGER_RESOURCE_TABLE, workflow_id\n",
+    ")\n",
+    "\n",
+    "workflow_data = json.loads(workflow_data_raw)\n",
+    "\n",
+    "workflow_function_descriptions = json.loads(workflow_data[\"workflow_function_descriptions\"])\n",
+    "deployment_config = json.loads(workflow_data[\"deployment_config\"])\n",
+    "deployed_regions = json.loads(workflow_data[\"deployed_regions\"])\n",
+    "\n",
+    "deployer_factory = DeployerFactory(project_dir=None)\n",
+    "config = deployer_factory.create_config_obj_from_dict(deployment_config=deployment_config)\n",
+    "deployer = create_default_deployer(config)\n",
+    "\n",
+    "with open(deployment_result_path, 'r') as f:\n",
+    "    unique_instance_region_combinations = json.load(f)\n",
+    "\n",
+    "for combination in unique_instance_region_combinations:\n",
+    "    deployment = json.loads(combination)\n",
+    "\n",
+    "    deployer.re_deploy(\n",
+    "        workflow_function_descriptions,\n",
+    "        deployed_regions,\n",
+    "        deployment\n",
+    "    )"
    ]
   },
   {
