--- a/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
+++ b/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
@@ -445,7 +445,41 @@
      "text": [
       "Found credentials in shared credentials file: ~/.aws/credentials\n",
       "Found credentials in shared credentials file: ~/.aws/credentials\n",
-      "Found credentials in shared credentials file: ~/.aws/credentials\n"
+      "Found credentials in shared credentials file: ~/.aws/credentials\n",
+      "2024/03/15 10:29:11 logged in via /Users/viktorgsteiger/.docker/config.json\n",
+      "2024/03/15 10:29:11 Copying from 485595969306.dkr.ecr.us-west-1.amazonaws.com/dna_visualization-0_0_1-visualize_aws-us-west-1:latest to 485595969306.dkr.ecr.us-west-2.amazonaws.com/dna_visualization-0_0_1-visualize_aws-us-west-2:latest\n",
+      "2024/03/15 10:29:13 pushed blob: sha256:f3d4198225085ff882381ef2b6626c18d822659db3dd9fa97cec79283dabde53\n",
+      "2024/03/15 10:29:13 pushed blob: sha256:410d97f1013b0e56c8a24e5a95517c536d5cad71829d982813a28e1a1b8ec82f\n",
+      "2024/03/15 10:29:13 pushed blob: sha256:2a9f1ae020e1174089186c85e75fdd02adc9b21031f42edd009f1b66a1f739e5\n",
+      "2024/03/15 10:29:14 pushed blob: sha256:c0d5bbf876d39aad4f3f6c18ec46e088d9e4320d62020ba7348d9a6f5f8aba3a\n",
+      "2024/03/15 10:29:14 pushed blob: sha256:b477e693ec4e74f59308f787ea35b925768016929eee309baf9310f096f55b3e\n",
+      "2024/03/15 10:29:15 pushed blob: sha256:0cc85a9c628902a792d7ff8ea7b23a173f739d6596cec555bb80bc6dcc507973\n",
+      "2024/03/15 10:29:16 pushed blob: sha256:b58f8e4f290518b0410dd0da849262211fb97e7d311cf80b5cd9f7b5525b86b9\n",
+      "2024/03/15 10:29:17 pushed blob: sha256:ed409746ab282cabf7fddc76008cdb3baccbe0e88f180a8d58b00faf9551b0bf\n",
+      "2024/03/15 10:29:17 pushed blob: sha256:2ed78c713cbfba5ffe84a44b6a4152a3b60d626c818518fa34a8da036fb44327\n",
+      "2024/03/15 10:29:25 pushed blob: sha256:396455a9302ab20894d6d6216f269f519d63eb8e684004e729365dda8948261c\n",
+      "2024/03/15 10:29:26 pushed blob: sha256:6bb5fb8ece3b1c4ec9e64c84d37ed28e3e91bc5e064967b99835c97cfdf46171\n",
+      "2024/03/15 10:29:26 pushed blob: sha256:8aecfeb080b96075a8323a2174d424959302fa64425c14a8cd2c9e70abab2b72\n",
+      "2024/03/15 10:29:27 485595969306.dkr.ecr.us-west-2.amazonaws.com/dna_visualization-0_0_1-visualize_aws-us-west-2:latest: digest: sha256:fcbebf5f8d5d8fee733e1a4ce309f4a2c2cdbc77e61e05f4a67ec01e3dbaa1d3 size: 2621\n",
+      "Docker image 485595969306.dkr.ecr.us-west-2.amazonaws.com/dna_visualization-0_0_1-visualize_aws-us-west-2:latest copied successfully.\n",
+      "Found credentials in shared credentials file: ~/.aws/credentials\n",
+      "Found credentials in shared credentials file: ~/.aws/credentials\n",
+      "2024/03/15 10:30:02 logged in via /Users/viktorgsteiger/.docker/config.json\n",
+      "2024/03/15 10:30:02 Copying from 485595969306.dkr.ecr.us-west-1.amazonaws.com/dna_visualization-0_0_1-getinput_aws-us-west-1:latest to 485595969306.dkr.ecr.us-west-2.amazonaws.com/dna_visualization-0_0_1-getinput_aws-us-west-2:latest\n",
+      "2024/03/15 10:30:03 pushed blob: sha256:410d97f1013b0e56c8a24e5a95517c536d5cad71829d982813a28e1a1b8ec82f\n",
+      "2024/03/15 10:30:03 pushed blob: sha256:f3d4198225085ff882381ef2b6626c18d822659db3dd9fa97cec79283dabde53\n",
+      "2024/03/15 10:30:04 pushed blob: sha256:c0d5bbf876d39aad4f3f6c18ec46e088d9e4320d62020ba7348d9a6f5f8aba3a\n",
+      "2024/03/15 10:30:05 pushed blob: sha256:b477e693ec4e74f59308f787ea35b925768016929eee309baf9310f096f55b3e\n",
+      "2024/03/15 10:30:05 pushed blob: sha256:2a9f1ae020e1174089186c85e75fdd02adc9b21031f42edd009f1b66a1f739e5\n",
+      "2024/03/15 10:30:06 pushed blob: sha256:0cc85a9c628902a792d7ff8ea7b23a173f739d6596cec555bb80bc6dcc507973\n",
+      "2024/03/15 10:30:07 pushed blob: sha256:b58f8e4f290518b0410dd0da849262211fb97e7d311cf80b5cd9f7b5525b86b9\n",
+      "2024/03/15 10:30:07 pushed blob: sha256:ed409746ab282cabf7fddc76008cdb3baccbe0e88f180a8d58b00faf9551b0bf\n",
+      "2024/03/15 10:30:08 pushed blob: sha256:49fe0b49052d469c234745471a99d2ad632699979d8125b7328f6a0f6d2db682\n",
+      "2024/03/15 10:30:11 pushed blob: sha256:396455a9302ab20894d6d6216f269f519d63eb8e684004e729365dda8948261c\n",
+      "2024/03/15 10:30:14 pushed blob: sha256:8aecfeb080b96075a8323a2174d424959302fa64425c14a8cd2c9e70abab2b72\n",
+      "2024/03/15 10:30:18 pushed blob: sha256:6bb5fb8ece3b1c4ec9e64c84d37ed28e3e91bc5e064967b99835c97cfdf46171\n",
+      "2024/03/15 10:30:19 485595969306.dkr.ecr.us-west-2.amazonaws.com/dna_visualization-0_0_1-getinput_aws-us-west-2:latest: digest: sha256:e5a94e0a71713eb4187130c44b58bbd883714a10d8582149409e8686bfde1468 size: 2621\n",
+      "Docker image 485595969306.dkr.ecr.us-west-2.amazonaws.com/dna_visualization-0_0_1-getinput_aws-us-west-2:latest copied successfully.\n"
      ]
     }
    ],
