--- a/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
+++ b/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,13 +693,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "experiments_collected_data_dir = f\"./data/collected_workflow/{workflow_id}/experiments\"\n",
     "\n",
-    "log_sync(f\"./data/run_data/experiments/{workflow_id}\", workflow_id)\n",
+    "log_sync(f\"./data/run_data/experiments/{workflow_id}\", workflow_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'set' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m experiments_collected_data_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/collected_workflow/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mworkflow_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/experiments\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mworkflow_collect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./data/run_data/experiments/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mworkflow_id\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/data.json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexperiments_collected_data_dir\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[32], line 10\u001b[0m, in \u001b[0;36mworkflow_collect\u001b[0;34m(input_dir, output_dir)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(input_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      8\u001b[0m     data \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m---> 10\u001b[0m workflow_summary \u001b[38;5;241m=\u001b[39m \u001b[43mworkflow_retriever\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_transform_workflow_summary\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(output_dir, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/data.json\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
+      "File \u001b[0;32m~/Documents/multi-x-serverless/multi_x_serverless/data_collector/components/workflow/workflow_retriever.py:28\u001b[0m, in \u001b[0;36mWorkflowRetriever._transform_workflow_summary\u001b[0;34m(self, workflow_summarized)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_transform_workflow_summary\u001b[39m(\u001b[38;5;28mself\u001b[39m, workflow_summarized: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m[\u001b[38;5;28mstr\u001b[39m, Any]:\n\u001b[1;32m     26\u001b[0m     summarized_workflow \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(workflow_summarized)\n\u001b[0;32m---> 28\u001b[0m     start_hop_summary, instance_summary \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_construct_summaries\u001b[49m\u001b[43m(\u001b[49m\u001b[43msummarized_workflow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlogs\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[1;32m     31\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mworkflow_runtime_samples\u001b[39m\u001b[38;5;124m\"\u001b[39m: summarized_workflow[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mworkflow_runtime_samples\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     32\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdaily_invocation_counts\u001b[39m\u001b[38;5;124m\"\u001b[39m: summarized_workflow\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdaily_invocation_counts\u001b[39m\u001b[38;5;124m\"\u001b[39m, {}),\n\u001b[1;32m     33\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstart_hop_summary\u001b[39m\u001b[38;5;124m\"\u001b[39m: start_hop_summary,\n\u001b[1;32m     34\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minstance_summary\u001b[39m\u001b[38;5;124m\"\u001b[39m: instance_summary,\n\u001b[1;32m     35\u001b[0m     }\n",
+      "File \u001b[0;32m~/Documents/multi-x-serverless/multi_x_serverless/data_collector/components/workflow/workflow_retriever.py:43\u001b[0m, in \u001b[0;36mWorkflowRetriever._construct_summaries\u001b[0;34m(self, logs)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m log \u001b[38;5;129;01min\u001b[39;00m logs:\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_extend_start_hop_summary(start_hop_summary, log)\n\u001b[0;32m---> 43\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_extend_instance_summary\u001b[49m\u001b[43m(\u001b[49m\u001b[43minstance_summary\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlog\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m start_hop_summary, instance_summary\n",
+      "File \u001b[0;32m~/Documents/multi-x-serverless/multi_x_serverless/data_collector/components/workflow/workflow_retriever.py:68\u001b[0m, in \u001b[0;36mWorkflowRetriever._extend_instance_summary\u001b[0;34m(self, instance_summary, log)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle_execution_latencies(log, instance_summary)\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle_region_to_region_transmission(log, instance_summary)\n\u001b[0;32m---> 68\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_handle_missing_region_to_region_transmission_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43minstance_summary\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle_non_executions(log, instance_summary)\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_calculate_invocation_probability(instance_summary)\n",
+      "File \u001b[0;32m~/Documents/multi-x-serverless/multi_x_serverless/data_collector/components/workflow/workflow_retriever.py:165\u001b[0m, in \u001b[0;36mWorkflowRetriever._handle_missing_region_to_region_transmission_data\u001b[0;34m(self, instance_summary)\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m transfer_information \u001b[38;5;129;01min\u001b[39;00m to_regions\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[1;32m    164\u001b[0m     existing_sizes \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mfloat\u001b[39m(data) \u001b[38;5;28;01mfor\u001b[39;00m data \u001b[38;5;129;01min\u001b[39;00m transfer_information[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtransfer_size_to_transfer_latencies\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mkeys()]\n\u001b[0;32m--> 165\u001b[0m     missing_sizes \u001b[38;5;241m=\u001b[39m \u001b[43mall_transfer_sizes\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mexisting_sizes\u001b[49m\n\u001b[1;32m    167\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m missing_size \u001b[38;5;129;01min\u001b[39;00m missing_sizes:\n\u001b[1;32m    168\u001b[0m         \u001b[38;5;66;03m# Find the nearest size for which we have data\u001b[39;00m\n\u001b[1;32m    169\u001b[0m         nearest_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(\n\u001b[1;32m    170\u001b[0m             transfer_information[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtransfer_size_to_transfer_latencies\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mkeys(),\n\u001b[1;32m    171\u001b[0m             key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m x, missing_size\u001b[38;5;241m=\u001b[39mmissing_size: \u001b[38;5;28mabs\u001b[39m(\u001b[38;5;28mfloat\u001b[39m(x) \u001b[38;5;241m-\u001b[39m missing_size),  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[1;32m    172\u001b[0m         )\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'set' and 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "experiments_collected_data_dir = f\"./data/collected_workflow/{workflow_id}/experiments\"\n",
+    "\n",
     "workflow_collect(f\"./data/run_data/experiments/{workflow_id}/data.json\", experiments_collected_data_dir)"
    ]
   },
@@ -709,9 +736,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from multi_x_serverless.routing.deployment_input.components.calculators.carbon_calculator import CarbonCalculator\n",
+    "from multi_x_serverless.routing.deployment_input.components.loaders.carbon_loader import CarbonLoader\n",
+    "from multi_x_serverless.routing.deployment_input.components.loaders.datacenter_loader import DatacenterLoader\n",
+    "from multi_x_serverless.routing.deployment_input.components.calculators.runtime_calculator import RuntimeCalculator\n",
+    "\n",
+    "from multi_x_serverless.common.models.endpoints import Endpoints\n",
+    "from multi_x_serverless.routing.deployment_input.components.loaders.workflow_loader import WorkflowLoader\n",
+    "\n",
     "result_data_points = {}\n",
     "\n",
     "deployment_result_path = f'./data/deployment_results/{workflow_id}/'\n",
+    "\n",
+    "endpoints = Endpoints()\n",
+    "\n",
+    "def calculate_carbon_of_deployment_at_time(deployment, date, hour_of_day):\n",
+    "\n",
+    "    def mock_carbon_loader_setup(self, available_regions: set[str]):\n",
+    "        real_available_regions = list(locations.keys())\n",
+    "        loaded_carbon_data = {}\n",
+    "        for region in real_available_regions:\n",
+    "            carbon_data_path = f'./data/collected_carbon/{region}/{date}/data.json'\n",
+    "            with open(carbon_data_path, 'r') as file:\n",
+    "                loaded_carbon_data[f'aws:{region}'] = json.load(file)\n",
+    "        self._carbon_data = loaded_carbon_data\n",
+    "    \n",
+    "    def mock_workflow_loader_setup(self, workflow_id: str):\n",
+    "        collected_data_dir = experiments_collected_data_dir + f\"/data.json\"\n",
+    "\n",
+    "        with open(collected_data_dir, \"r\") as f:\n",
+    "            self._workflow_data = json.load(f)\n",
+    "\n",
+    "    with patch.object(CarbonLoader, 'setup', new=mock_carbon_loader_setup), patch.object(WorkflowLoader, 'setup', new=mock_workflow_loader_setup):\n",
+    "        carbon_loader = CarbonLoader(None)\n",
+    "        datacenter_loader = DatacenterLoader(endpoints.get_data_collector_client())\n",
+    "        workflow_loader = WorkflowLoader(None)\n",
+    "        carbon_calculator = CarbonCalculator(carbon_loader, datacenter_loader, workflow_loader, None)\n",
+    "\n",
+    "        carbon_calculator.alter_carbon_setting(hour_of_day)\n",
+    "\n",
+    "        total_execution_carbon = 0\n",
+    "        total_transmission_carbon = 0\n",
+    "        for instance_name, provider_region in deployment.items():\n",
+    "            total_execution_carbon_per_instance = 0\n",
+    "            for execution_latency in workflow_loader._workflow_data[\"instance_summary\"][instance_name][\"executions\"][f\"{provider_region['provider']}_{provider_region['region']}\"]:\n",
+    "                total_execution_carbon_per_instance += carbon_calculator.calculate_execution_carbon(instance_name, f\"{provider_region['provider']}_{provider_region['region']}\", execution_latency)\n",
+    "\n",
+    "            avg_execution_carbon_per_instance_for_this_day = total_execution_carbon_per_instance / len(workflow_loader._workflow_data[\"instance_summary\"][instance_name][\"executions\"][f\"{provider_region['provider']}_{provider_region['region']}\"])\n",
+    "            total_execution_carbon += avg_execution_carbon_per_instance_for_this_day\n",
+    "\n",
+    "            for to_instance, to_instance_data in workflow_loader._workflow_data[\"instance_summary\"][instance_name][\"to_instance\"].items():\n",
+    "                total_from_to_transfer_carbon = 0\n",
+    "                number_of_data = 0\n",
+    "                from_region = f\"{provider_region['provider']}_{provider_region['region']}\"\n",
+    "                to_region = f\"{deployment[to_instance]['provider_region']['provider']}_{deployment[to_instance]['provider_region']['region']}\"\n",
+    "                transfer_size_to_transfer_latencies = to_instance_data[\"regions_to_regions\"][from_region][to_region]\n",
+    "                for transfer_size, transfer_latencies in transfer_size_to_transfer_latencies.items():\n",
+    "                    for transfer_latency in transfer_latencies:\n",
+    "                        total_from_to_transfer_carbon += carbon_calculator.calculate_transmission_carbon(from_region, to_region, float(transfer_size), transfer_latency)\n",
+    "                        number_of_data += 1\n",
+    "                avg_transfer_carbon_for_this_day = total_from_to_transfer_carbon / number_of_data\n",
+    "            \n",
+    "                total_transmission_carbon += avg_transfer_carbon_for_this_day\n",
+    "        \n",
+    "        return {\"total_execution_carbon\": total_execution_carbon, \"total_transmission_carbon\": total_transmission_carbon}\n",
     "\n",
     "for directory in os.listdir(deployment_result_path):\n",
     "    if not os.path.isdir(os.path.join(deployment_result_path, directory)):\n",
@@ -719,7 +807,26 @@
     "    result_data_points[directory] = []\n",
     "\n",
     "    for file in os.listdir(os.path.join(deployment_result_path, directory)):\n",
-    "        "
+    "        day_date = file.split(\".\")[0]\n",
+    "\n",
+    "        day_datetime = datetime.strptime(day_date, \"%Y-%m-%d\")\n",
+    "\n",
+    "        with open(os.path.join(deployment_result_path, directory, file), 'r') as f:\n",
+    "            data = json.load(f)\n",
+    "\n",
+    "        for time_key, deployment in data[\"time_keys_to_staging_area_data\"].items():\n",
+    "            calculated_carbon = calculate_carbon_of_deployment_at_time(deployment, day_date, time_key)\n",
+    "        \n",
+    "            result_data_points[directory].append({\n",
+    "                \"time_key\": time_key,\n",
+    "                \"carbon_intensity\": calculated_carbon[\"total_execution_carbon\"] + calculated_carbon[\"total_transmission_carbon\"],\n",
+    "                \"total_execution_carbon\": calculated_carbon[\"total_execution_carbon\"],\n",
+    "                \"total_transmission_carbon\": calculated_carbon[\"total_transmission_carbon\"]\n",
+    "            })\n",
+    "\n",
+    "# Store the result data points\n",
+    "with open(f'./data/deployment_results/{workflow_id}/result_data_points.json', 'w') as f:\n",
+    "    json.dump(result_data_points, f, indent=4)\n"
    ]
   }
  ],
