--- a/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
+++ b/benchmarks/experiments/carbon_intensity_configs/experiment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,9 +539,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running dna_visualization-0.0.2 with no_constraints and [{'provider': 'aws', 'region': 'us-west-2'}]\n",
+      "Running dna_visualization-0.0.2 with no_constraints and [{'provider': 'aws', 'region': 'us-west-1'}]\n",
+      "Running dna_visualization-0.0.2 with no_constraints and [{'provider': 'aws', 'region': 'us-east-1'}]\n",
+      "Running dna_visualization-0.0.2 with no_constraints and [{'provider': 'aws', 'region': 'us-west-2'}, {'provider': 'aws', 'region': 'us-west-1'}]\n"
+     ]
+    }
+   ],
    "source": [
     "from multi_x_serverless.common.constants import GLOBAL_SYSTEM_REGION, DEPLOYMENT_OPTIMIZATION_MONITOR_RESOURCE_TABLE\n",
     "from multi_x_serverless.routing.workflow_config import WorkflowConfig\n",
@@ -588,12 +599,16 @@
     "    workflow_config_dict = json.loads(json.loads(workflow_config_from_table).get(\"workflow_config\"))\n",
     "    for configuration_name, configuration in constraint_configurations.items():\n",
     "        workflow_config_dict[\"constraints\"] = configuration[\"constraints\"]\n",
-    "        workflow_config = WorkflowConfig(workflow_config_dict)\n",
     "\n",
     "        for location_configuration in region_configurations:\n",
     "\n",
-    "            for instance in workflow_config[\"instances\"].values():\n",
+    "            if len(location_configuration) == 1:\n",
+    "                workflow_config_dict[\"home_region\"] = location_configuration[0]\n",
+    "\n",
+    "            for instance in workflow_config_dict[\"instances\"].values():\n",
     "                instance[\"regions_and_providers\"][\"allowed_regions\"] = location_configuration\n",
+    "\n",
+    "            workflow_config = WorkflowConfig(workflow_config_dict)\n",
     "\n",
     "            for day in range((end_date - start_date).days + 1):\n",
     "                current_date = start_date + timedelta(days=day)\n",
@@ -623,9 +638,14 @@
     "                    with open(os.path.join(result_path, f'{current_date.strftime(\"%Y-%m-%d\")}.json'), 'w') as file:\n",
     "                        json.dump(result, file, indent=4)\n",
     "\n",
+    "                print(f\"Running {benchmark} with {configuration_name} and {location_configuration}\")\n",
+    "\n",
     "                with patch.object(CarbonLoader, 'setup', new=mock_carbon_loader_setup), patch.object(RegionViabilityLoader, 'setup', new=mock_region_viability_setup), patch.object(DeploymentAlgorithm, '_upload_result', new=mock_upload_result), patch.object(WorkflowLoader, 'setup', new=mock_workflow_loader_setup):\n",
     "                    algorithm = StochasticHeuristicDeploymentAlgorithm(workflow_config)\n",
-    "                    algorithm.run([f\"{i}\" for i in range(24)])"
+    "                    algorithm.run([f\"{i}\" for i in range(24)])\n",
+    "\n",
+    "                if len(location_configuration) == 1:\n",
+    "                    break"
    ]
   },
   {
